samples/_failures_safe/1761090882_3b613b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0dd05001.c: In function ‘main’:
./samples/SAFE/__tmp_0dd05001.c:139:9: error: expected identifier or ‘(’ at end of input
  139 |         size_t
      |         ^~~~~~
./samples/SAFE/__tmp_0dd05001.c:139:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0dd05001.c:139:9: error: expected declaration or statement at end of input
